# Algorithms

./: Abort.hpp  AutoVal.hpp  CMakeLists.txt  CharVal.hpp  Col.hpp  Data.hpp  Database.hpp  Date.hpp  DateVal.hpp  Empty.hpp  FloatVal.hpp  Functions.hpp  GenericException.hpp  GrammarException.hpp  IntVal.hpp  Tab.hpp  TextVal.hpp  Time.hpp  TimeVal.hpp  main.cpp
